--- a/static/css/header.css
+++ b/static/css/header.css
@@ -90,17 +90,21 @@ header {
 .hide{
     display: none;
 }
+dialog {
+    background-color: rgba(0, 0, 0, 0.25);
+    border: none; /* 移除默認邊框 */
+    padding: 0; /* 移除默認內邊距 */
+}
 #signin {
     position: fixed; 
     top: 80px;
-    right: auto;
-    left: auto; 
     width: 340px;
-    height: auto; 
+    height: auto;
+    left: 50%; 
+    transform: translateX(-50%);
     background-color: #FFFFFF;
     border-radius: 6px;
     box-shadow: 0px 4px 60px 0px #AAAAAA;
-    z-index: 2;
 }
 .decorator-bar {
     width: 100%;
@@ -186,12 +190,11 @@ header {
 #signup {
     position: fixed; 
     top: 80px;
-    right: auto;
-    left: auto; 
     width: 340px;
-    height: auto; 
+    height: auto;
+    left: 50%; 
+    transform: translateX(-50%);
     background-color: #FFFFFF;
     border-radius: 6px;
     box-shadow: 0px 4px 60px 0px #AAAAAA;
-    z-index: 2;
 }
