--- a/static/css/attraction.css
+++ b/static/css/attraction.css
@@ -282,6 +282,9 @@ main{
     align-items: center;
     box-sizing: border-box;   
 }
+.booking-block__form-price-container {
+    display: flex;
+}
 .font16-400 {
     font-size: 16px;
     font-weight: 400;
