--- a/static/css/attraction.css
+++ b/static/css/attraction.css
@@ -402,7 +402,7 @@ footer {
 
 @media (min-width: 800px) and (max-width: 1200px){
     .nav-bar {
-        margin: 10px 0px 10px 10px;
+        margin: 10px 0px 10px 10px !important;
     }
     .img-block {
         width: 100%;
@@ -497,7 +497,7 @@ footer {
         flex: 1; 
     }
     .nav-bar {
-        margin: 10px 0px 10px 10px;
+        margin: 10px 0px 10px 10px !important;
     }
     .attraction-topblock {
         width: 100%;
