--- a/static/css/booking.css
+++ b/static/css/booking.css
@@ -132,14 +132,16 @@ main{
     color: #666666;
     margin-right: 5px;
 }
-.payment-block label {
+.payment-block__label {
     font-size: 16px;
     font-weight: 400;
     text-align: left;
     color: #666666;
     margin-bottom: 15px;
+    display: flex;
+    align-items: center;
 }
-.payment-block input {
+.tpfield {
     width: 200px;
     height: 38px;
     box-sizing: border-box;
@@ -149,6 +151,12 @@ main{
     font-size: 16px;
     font-weight: 500;
     text-align: left;
+}
+.tappay-field-focus {
+    border-color: #66afe9;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
 }
 .confirm-block {
     width: 980px;
