--- a/static/css/header.css
+++ b/static/css/header.css
@@ -21,6 +21,10 @@ header {
     align-items: center;
     justify-content: center;
     border-bottom: 1px solid #E8E8E8;
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    background-color: #FFFFFF;
 }
 .nav-bar {
     width: 1200px;
